data/objects/Measure__c.object
<CustomObject>
    <description>Measure Reference Table</description>
    <fields>
        <fullName>C360AccountID__c</fullName>
        <externalId>true</externalId>
        <label>C360AccountID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C360MeasureID__c</fullName>
        <externalId>true</externalId>
        <label>C360MeasureID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Conversion_Bill_Period__c</fullName>
        <label>Conversion Bill Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Date__c</fullName>
        <label>Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Measure_Program_ID__c</fullName>
        <externalId>true</externalId>
        <label>Measure Program ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Measure</relationshipLabel>
        <relationshipName>Measure</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Measure_Program_ID__c</columns>
        <columns>Org__c</columns>
        <columns>C360AccountID__c</columns>
        <columns>C360MeasureID__c</columns>
        <columns>Conversion_Bill_Period__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>